k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: i69app
  labels:
    lab: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      lab: landing
  template:
    metadata:
      labels:
        lab: landing
    spec:
      containers:
        - name: landing
          image: __REPLACE_IMAGE__
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
      - name: i69
---
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: i69app
  labels:
    lab: landing
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    lab: landing
