k8s/ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
  name: landing
  namespace: i69app
spec:
  tls:
    - hosts:
        - i69app.com
      secretName: landing-tls
  rules:
    - host: i69app.com
      http:
        paths: 
        - backend:
            service:
              name: landing
              port:
                number: 3000
          path: /
          pathType: Prefix
